header-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: my-traefik-auth-converter
    namespace: default
spec:
    plugin:
        traefik-auth-converter:
            encodeToken: "false"  # Assuming the JWT token is already encoded
            sourceType: Basic  # Assuming the original token is Basic authentication
            targetType: Bearer  # Convert to Bearer type for testing
            tokenSource: password  # This could be 'password' or any other source, depending on how the token is structured



# test : curl -H "X-API-KEY: 123test" http://localhost:81/ayoub/api/v1/users
