pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linux-command-pod
spec:
  containers:
  - name: linux-container
    image: alpine
    command: ["/bin/sh", "-c"]
    args: ["ls; sleep 3600"] # Replace "ls" with your desired command
  restartPolicy: Never
