frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
        - name: angular-container
          image: othmanemaarad442/projet-angular-frontend-2
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular-frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: LoadBalancer
