keycloak-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.0
        args:
          - start-dev
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
      volumes:
      - name: keycloak-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort  # Changed from LoadBalancer to NodePort
  ports:
  - port: 9094
    targetPort: 8080
    nodePort: 30094  # Exposes Keycloak on this port on all cluster nodes
  selector:
    app: keycloak
