ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ayoub-service-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && PathPrefix(`/ayoub`)
      kind: Rule
      services:
        - name: ayoub-service
          port: 9090
