ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ayoub-service-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ayoub-service
                port:
                  number: 9090
